# StarScope

./: .editorconfig  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PROJECT_REVIEW.md  README.md  REFACTORING_SUMMARY.md  TECH_DEBT.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  start-dev.sh  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/rules/: api-endpoints.md  database.md  frontend-patterns.md  sidecar-services.md
.github/workflows/: release.yml  test.yml
.husky/: pre-commit
docs/: engineering.md
docs/plans/: 2026-03-22-discovery-degradation-e2e.md  2026-03-22-final-9.5-gaps.md  (+3 more)
e2e/: alert-rules.spec.ts  category-management.spec.ts  compare-flow.spec.ts  compare.spec.ts  dashboard-widgets.spec.ts  degradation.spec.ts  discovery-flow.spec.ts  github-connection.spec.ts  import-export.spec.ts  navigation.spec.ts  settings-persistence.spec.ts  settings.spec.ts  signals.spec.ts  trends.spec.ts  tsconfig.json  watchlist-flow.spec.ts  watchlist.spec.ts
scripts/: check-api-drift.sh  check-bundle-size.sh
sidecar/: .coveragerc  .env.example  MIGRATION_GUIDE_API_RESPONSE.md  alembic.ini  constants.py  logging_config.py  main.py  mypy.ini  pytest.ini  requirements.txt  starscope-sidecar.spec
src/: App.css  App.tsx  config.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  starscope-sidecar-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/utils/: id.ts  (+13 more)
(+547 files in other folders)
